@@ -1,2 +1,0 @@
-def time_import():
-    import pint  # noqa: F401
